feat: redesign SimulationView layout for 14" screens
Restructure controls into single row (category, scenario, budget, turns,
buttons), move DriftSummaryPanel to Results tab, add Scenario Details tab,
contextual button visibility by run state, two-level category→scenario
selection, theme toggle and nav links in header. Move injection checkbox
below conversation panel. Add missing adversarial category to 4 scenarios.